// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return expected output for a variety of inputs 1`] = `
Array [
  "/connect/site-info/http/example.com",
]
`;

exports[`should return expected output for a variety of inputs 2`] = `
Array [
  "/connect/site-info/https/example.com",
]
`;

exports[`should return expected output for a variety of inputs 3`] = `
Array [
  "/connect/site-info/http/www.example.com",
]
`;

exports[`should return expected output for a variety of inputs 4`] = `
Array [
  "/connect/site-info/http/example.com",
]
`;

exports[`should return expected output for a variety of inputs 5`] = `
Array [
  "/connect/site-info/https/example.com",
]
`;

exports[`should return expected output for a variety of inputs 6`] = `
Array [
  "/connect/site-info/http/example.com::a::path",
]
`;

exports[`should return expected output for a variety of inputs 7`] = `
Array [
  "/connect/site-info/http/example.com::a::path",
]
`;

exports[`should return expected output for a variety of inputs 8`] = `
Array [
  "/connect/site-info/http/example.com",
]
`;

exports[`should return expected output for a variety of inputs 9`] = `
Array [
  "/connect/site-info/http/example.com:12345",
]
`;

exports[`should return expected output for a variety of inputs 10`] = `
Array [
  "/connect/site-info/http/example.com:12345",
]
`;

exports[`should return expected output for a variety of inputs 11`] = `
Array [
  "/connect/site-info/http/example.com:12345::a::path",
]
`;

exports[`should return expected output for a variety of inputs 12`] = `
Array [
  "/connect/site-info/http/example.com:12345",
]
`;

exports[`should return expected output for a variety of inputs 13`] = `
Array [
  "/connect/site-info/http/example.com::this-is-a-tricky-path-%2F%3F%26%3D%3A",
]
`;

exports[`should return expected output for a variety of inputs 14`] = `
Array [
  "/connect/site-info/http/xn--1camcyp5b2a.com",
]
`;
